<resources>
    <string name="app_name">Happy Birthday</string>
    <string name="label_happy_birthday_statement">Happy Birthday WhoisAbel</string>
    <string name="label_signature">From Hana</string>
    <string name="label_roll">Roll</string>

    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
    <string name="hint_cost_of_service">Cost of Service</string>
    <string name="label_service_question">How was the service?</string>
    <string name="label_amazing">Amazing (20%)</string>
    <string name="label_good">Good (18%)</string>
    <string name="label_okay">Okay (15%)</string>
    <string name="label_round_up_switch">Round up tip?</string>
    <string name="label_calculate">Calculate</string>
    <string name="label_result">Tip Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="label_cost_of_service">Cost of service</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>


    <string name="dog_age">Age: %1$s</string>
    <string name="dog_hobbies">Hobbies: %1$s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="grid">Grid</string>
    <string name="label_actionbar">ActionBar</string>
    <string name="label_toolbar">Toolbar</string>
    <string name="label_appbar">AppBar</string>
    <string name="label_exit">Exit</string>
    <string name="label_adb">ADB</string>
    <string name="label_add">Add</string>

    <string name="detail_prefix">Words That Start With</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="look_up_word">Look up word in a Browser Search</string>
    <string name="look_up_words">Show Stored Words</string>

    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>