<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".unit2.tipTime.TipTimeActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cost_of_service"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cost_of_service" />

    <RadioGroup
        android:id="@+id/rg_tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_option_twenty_percent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_service_question">

        <RadioButton
            android:id="@+id/rb_option_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_amazing" />

        <RadioButton
            android:id="@+id/rb_option_eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_good" />

        <RadioButton
            android:id="@+id/rb_option_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_okay" />


    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/label_round_up_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_tip_options" />

    <Button
        android:id="@+id/btn_calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_round_up_switch" />

    <TextView
        android:id="@+id/tv_tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate_button"
        android:text="@string/label_result" />

</androidx.constraintlayout.widget.ConstraintLayout>