<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".extra.ParentActivity">


    <Button
        android:id="@+id/btn_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/button_width"
        android:text="@string/label_actionbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/button_width"
        android:text="@string/label_toolbar"
        app:layout_constraintStart_toStartOf="@id/btn_action_bar"
        app:layout_constraintBottom_toTopOf="@id/btn_action_bar"/>

    <Button
        android:id="@+id/btn_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/button_width"
        android:text="@string/label_appbar"
        app:layout_constraintStart_toStartOf="@+id/btn_action_bar"
        app:layout_constraintTop_toBottomOf="@id/btn_action_bar"/>


</androidx.constraintlayout.widget.ConstraintLayout>